--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewpoint" content="width=device-width">
+    <meta name="description" content="ACME.studio official Landing Page file">
+    <meta name="keywords" content="UX, Strategy, Digital Transformation, Apps, Consulting,Software Development">
+    <meta name="author" content="ACME.studio Development team">
+
+    <link rel="stylesheet" href="assets/styles/styles.css">
+
+    <title>ACME.Studio</title>
 </head>
 <body>
+
+    <div id="header-placeholder"></div>
+    <main>
+        <p>Pending to add Content.</p>
+    </main>
+
+    <div id="footer-placeholder"></div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="assets/scripts/main.js" type="text/javascript"></script>
+
+
 
 </body>
 </html>
